--- a/Tasker/Tasker.vcxproj.filters
+++ b/Tasker/Tasker.vcxproj.filters
@@ -38,7 +38,10 @@
     <ClInclude Include="TaskerMain.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="json.hpp">
+    <ClInclude Include="json3.4.0.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="json2.1.1.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
