--- a/Tasker/Tasker.vcxproj.filters
+++ b/Tasker/Tasker.vcxproj.filters
@@ -24,6 +24,9 @@
     <ClCompile Include="TaskerMain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TaskerUpgrade.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SETTASKER.hpp">
@@ -42,6 +45,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="json2.1.1.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TaskerUpgrade.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
