--- a/Tasker/Tasker.vcxproj.filters
+++ b/Tasker/Tasker.vcxproj.filters
@@ -27,6 +27,9 @@
     <ClCompile Include="TaskerUpgrade.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="TaskerBase.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="SETTASKER.hpp">
@@ -48,6 +51,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="TaskerUpgrade.hpp">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="TaskerBase.hpp">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
