Upgrade to json 3.6.1 + improved plan in tasks + fixed abug in new task creation + fixed a bug in cur version.

--- a/Tasker/Tasker.vcxproj
+++ b/Tasker/Tasker.vcxproj
@@ -127,6 +127,7 @@
     <ClInclude Include="argvparser.hpp" />
     <ClInclude Include="json3.4.0.hpp" />
     <ClInclude Include="json2.1.1.hpp" />
+    <ClInclude Include="json3.6.1.hpp" />
     <ClInclude Include="SETTASKER.hpp" />
     <ClInclude Include="TaskerBase.hpp" />
     <ClInclude Include="TaskerMain.hpp" />
